src/sass/general/various.scss
html {
    position: relative;
    min-height: 100vh;
    padding-bottom: 70px;
    font-size: 18px;
}
body {
    font-family: $truUltra;
    background: $backgroundColor;
    margin-bottom: 0;
    background: url("/img/blur_light.jpg") $backgroundColor;
    background-attachment: fixed;
    background-size: cover;
}
.light {
    display: initial;
}
.dark {
    display: none;
}
@media (prefers-color-scheme: dark) {
    body {
        background: url("/img/blur_dark.jpg") $backgroundColor;
        background-attachment: fixed;
        background-size: cover;
    }
    .light {
        display: none;
    }
    .dark {
        display: initial;
    }
}

